# stock-analysis

./: .env.example  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README-zh.md  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.opencode/: AGENTS.md
.sisyphus/run-continuation/: ses_1e9918f01ffe4loU0pLJqmQlD4.json
AMD/: 260510-01_整体分析.md  260510-02_过去一年.md  260510-03_未来一年.md  260510_综合分析报告.html  260511_综合分析报告.html
AMD/以往分析/: 260511_综合分析报告.html
InvestSkill/: generate_html.py  validate_html.py
Stock Kit/InvestSkill/: CLAUDE.md  _template.html  rank.py  test_comprehensive.py  test_engine.py  test_mock_report.py  test_validate_crypto.py  使用说明.md
Stock Kit/data/: prices.json
data/: companies.json.example
docs/: current-report-audit-2026-05-15.md
tests/: test_batch.py  test_comprehensive.py  test_engine.py  test_mock_report.py  test_pipeline.py  test_ranker.py  test_validate_crypto.py
小米/: 260510-01_整体分析.md  260510-02_过去一年.md  260510-03_未来一年.md  260510_综合分析报告.html  260511_综合分析报告.html
比特币/: 260510-01_整体分析.md  260510-02_过去一年.md  260510-03_未来一年.md  260510_综合分析报告.html  260511_综合分析报告.html
特斯拉/: 260510-01_整体分析.md  260510-02_过去一年.md  260510-03_未来一年.md  260510_特斯拉_综合分析报告.html  260511_综合分析报告.html
美光/: 260510-01_整体分析.md  260510-02_过去一年.md  260510_综合分析报告.html  260511_综合分析报告.html
英伟达/: 260510-01_整体分析.md  260510-02_过去一年.md  260510-03_未来一年.md  260510_综合分析报告.html  260511_综合分析报告.html
英特尔/: 260510-01_整体分析.md  260510_英特尔_综合投资分析报告.html  260511_综合分析报告.html
苹果/: 260510-01_整体分析.md  260510-02_过去一年.md  260510-03_未来一年.md  260510_综合分析报告.html  260511_综合分析报告.html
(+114 files in other folders)
