[project]
name = "stock-analysis"
version = "3.0.0"
description = "综合投资分析框架 — Greenblatt 四层加权排名 + 多市场支持"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "severin"}]
keywords = ["investment", "stock-analysis", "greenblatt", "valuation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "yfinance>=1.3",
    "Jinja2>=3.1",
    "pydantic>=2.13",
    "langchain>=1.2",
    "langchain-openai>=1.2",
    "langgraph>=1.1",
    "openai>=2.36",
    "numpy>=2.4",
    "python-dotenv>=1.2",
    "requests>=2.33",
    "httpx>=0.28",
    "orjson>=3.11",
    "tiktoken>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.11",
    "mypy>=1.14",
]

[project.scripts]
stock-analysis = "stock_analysis.cli:main"

[project.urls]
Homepage = "https://github.com/severin/stock-analysis"
Repository = "https://github.com/severin/stock-analysis"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]